deploy/reranker-gpu/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: granite-reranker
  namespace: reranker-model
spec:
  selector:
    app: granite-reranker
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
