deploy/reranker-gpu/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: granite-reranker
  namespace: reranker-model
spec:
  to:
    kind: Service
    name: granite-reranker
  port:
    targetPort: 8080
  tls:
    termination: edge
